// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNamedStyles returns classes object 1`] = `
<div
  className="Test2-root-2"
/>
`;

exports[`useStyles returns classes object 1`] = `
<div
  className="makeStyles-root-1"
/>
`;
